tests/baselines/reference/parserES5SymbolProperty4(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
parserES5SymbolProperty4.ts(2,13): error TS2339: Property 'isRegExp' does not exist on type 'SymbolConstructor'.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== parserES5SymbolProperty4.ts (1 errors) ====
    declare class C {
        [Symbol.isRegExp]: string;
                ~~~~~~~~
!!! error TS2339: Property 'isRegExp' does not exist on type 'SymbolConstructor'.
    }